<resources>
    <string name="app_name">e驾学车(教练版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_null"></string>
    <string name="str_err_requiredinfo_not_completed">请填写所有信息</string>
    <string name="str_operation_success">操作成功</string>
    <string name="str_feature_unsupported">敬请期待</string>
    <string name="str_activity_main_title">e驾学车</string>
    <string name="str_err_unknown_reason">未知错误，请稍后重试</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_verify_phone">验证手机</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_service_info">服务协议</string>
    <string name="title_activity_image_browse">查看大图</string>
    <string name="title_activity_user_guide">e驾学车指南</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_view_profile">查看个人资料</string>
    <string name="title_activity_modify_password">修改密码</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="title_activity_message">消息</string>
    <string name="title_activity_order_list">我的订单</string>
    <string name="title_activity_order_state">订单状态</string>
    <string name="title_activity_complaint">投诉</string>
    <string name="title_activity_calendar">预约选课</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="title_activity_realtime_snapup">实时抢单</string>
    <string name="str_frag_snapup_title">抢  单</string>
    <string name="str_pcenter_default_coach_name">李文</string>
    <string name="str_pcenter_stat_dimen_ordernum">订单数</string>
    <string name="str_pcenter_stat_dimen_range">排行榜</string>
    <string name="str_pcenter_stat_dimen_goodrate">好评率</string>
    <string name="str_pcenter_stat_default_ordernum">0</string>
    <string name="str_pcenter_stat_default_praiserates">0%</string>
    <string name="str_pcenter_stat_default_range">9999</string>
    <string name="str_pcenter_status_auditing">(审核中)</string>
    <string name="str_pcenter_status_audit_fail">(审核未通过)</string>
    <string name="str_pcenter_star_unit">分</string>
    <string name="str_pcenter_userguide">使用指南</string>
    <string name="str_pcenter_recommend">推　　荐</string>
    <string name="str_pcenter_setting">设　　置</string>
    <string name="str_pcenter_neworder_autoalert">新订单自动弹出</string>
    <string name="str_main_todayorder">今日订单</string>
    <string name="str_main_default_todayorder">0</string>
    <string name="str_main_myorder">我的订单</string>
    <string name="str_main_default_myorder">0</string>
    <string name="str_main_menu_book_manage">预约管理</string>
    <string name="str_main_menu_begin_snapup">我要\n抢单</string>
    <string name="str_main_menu_listening_snapup">正在\n听单</string>
    <string name="str_main_menu_recruit_manage">招生管理</string>
    <string name="str_main_err_audit_notpassyet">抱歉，需要通过审核才能使用该功能</string>
    <string name="str_main_err_fail_snapup">抱歉，状态切换失败，请稍后重试</string>
    <string name="str_login_forget_pwd">忘记密码？</string>
    <string name="str_login_no_account">还没有账号？</string>
    <string name="str_login_register">马上注册</string>
    <string name="str_login_hint_username">用户名</string>
    <string name="str_login_hint_password">密码</string>
    <string name="str_login_login">登录</string>
    <string name="str_login_info_success">登录成功</string>
    <string name="str_login_err_nouser">未填写用户名</string>
    <string name="str_login_err_nopwd">未填写密码</string>
    <string name="str_login_err_account_forbidden">您的账户已被禁用，请联系客服处理</string>
    <string name="str_login_err_wrongpwd">用户名或密码错误，请检查拼写</string>
    <string name="str_verify_phone_title">验证手机</string>
    <string name="str_verify_phone_purpose">为了方便学员联系您，请验证手机</string>
    <string name="str_verify_phone_btn_get_vcode">点击获取</string>
    <string name="str_verify_phone_btn_verify">验证</string>
    <string name="str_verify_phone_countdown">%1$dS</string>
    <string name="str_verify_phone_btn_start">开始</string>
    <string name="str_verify_phone_hint_phonenum">请输入手机号</string>
    <string name="str_verify_phone_hint_verifycode">请输入验证码</string>
    <string name="str_verify_phone_protocal_prefix">点击开始，即表示同意</string>
    <string name="str_verify_phone_protocal_name">《e驾学车用户协议》</string>
    <string name="str_verify_phone_err_not_valid_number">请输入合适的手机号!</string>
    <string name="str_verify_phone_err_request_retry">重发</string>
    <string name="str_register_step_verifyphone">验证手机</string>
    <string name="str_register_step_fillprofile">填写资料</string>
    <string name="str_register_step_uploadfile">上传证件</string>
    <string name="str_register_step_next">下一步</string>
    <string name="str_register_hint_setpassword">请设置密码</string>
    <string name="str_register_hint_confirmpwd">请确认密码</string>
    <string name="str_register_msg_vcode">验证码已发送，请注意查收</string>
    <string name="str_register_fragp_hint_name">姓　名</string>
    <string name="str_register_fragp_hint_school">所属驾校</string>
    <string name="str_register_fragp_hint_carno">车牌号</string>
    <string name="str_register_fragp_hint_cardno">教练证件号</string>
    <string name="str_register_fragu_btn_takephoto">拍摄证件</string>
    <string name="str_register_fragu_btn_rephoto">重新拍摄</string>
    <string name="str_register_fragu_btn_submit">提交审核</string>
    <string name="str_register_fragu_requirements">请将驾驶证、行驶证、运营证、教练证平铺拍摄</string>
    <string name="str_register_err_cert_wronglength">教练证号码长度可能不正确</string>
    <string name="str_register_err_noavatar">您还未上传头像</string>
    <string name="str_register_err_vcode_outofdate">验证码已过期，请重新获取</string>
    <string name="str_register_err_pwd_firstempty">请先输入密码</string>
    <string name="str_register_err_pwd_nequal">两次密码不一致</string>
    <string name="str_register_err_vcode_invalid">验证码无效</string>
    <string name="str_register_err_register_failed">注册失败，请重试</string>
    <string name="str_register_err_network">网络异常，请稍后重试</string>
    <string name="str_register_err_cert_upload_not_finished">请耐心等待图片上传完毕再点击提交</string>
    <string name="str_register_err_profile_update_failed">很抱歉，资料提交失败，请稍后重试</string>
    <string name="str_register_info_register_ok">注册成功，请进一步完善您的信息</string>
    <string name="str_register_info_profile_ok">资料提交成功，我们将在2个工作日内审核</string>
    <string-array name="str_register_fragu_certnames">
        <item>驾驶证</item>
        <item>行驶证</item>
        <item>运营证</item>
        <item>教练证</item>
    </string-array>
    <string name="str_register_photo_select_source">选择照片来源</string>
    <string-array name="str_register_photo_source">
        <item>拍照</item>
        <item>从相册选择</item>
    </string-array>
    <string name="str_register_photo_alreay_added">已有照片</string>
    <string-array name="str_register_photo_operations">
        <item>查看大图</item>
        <item>删除并重传</item>
    </string-array>
    <string name="str_service_info_se">服务条款</string>
    <string name="str_service_info_pri">隐私政策</string>
    <string name="str_userguide_tips">【温馨提醒】</string>
    <string name="str_setting_header_personal">个人设置</string>
    <string name="str_setting_menuitem_viewprofile">查看个人资料</string>
    <string name="str_setting_menuitem_modifypwd">修改密码</string>
    <string name="str_setting_header_system">系统设置</string>
    <string name="str_setting_menuitem_orderprompt">订单自动弹出</string>
    <string name="str_setting_menuitem_voicetoggle">新消息语音提醒</string>
    <string name="str_setting_header_other">其他设置</string>
    <string name="str_setting_menuitem_update_software">软件升级</string>
    <string name="str_setting_menuitem_feedback">意见反馈</string>
    <string name="str_setting_menuitem_contactus">联系我们：4000&#8211;838&#8211;760</string>
    <string name="str_setting_menuitem_aboutus">关于我们</string>
    <string name="str_setting_logout">退出登录</string>
    <string name="str_viewprofile_avatar">头　像</string>
    <string name="str_viewprofile_name">姓　　名：</string>
    <string name="str_viewprofile_school">驾　　校：</string>
    <string name="str_viewprofile_carno">车　　牌：</string>
    <string name="str_viewprofile_phone">手　　机：</string>
    <string name="str_viewprofile_certno">教练证号：</string>
    <string name="str_viewprofile_modify_tips">如需修改，请致电客服</string>
    <string name="str_modifypwd_hint_oldpwd">请输入旧密码</string>
    <string name="str_modifypwd_hint_newpwd">请输入新密码</string>
    <string name="str_modifypwd_hint_cfmpwd">请确认新密码</string>
    <string name="str_modifypwd_error_toast">修改密码失败，请稍后重试</string>
    <string name="str_modifypwd_btn_confirm">确认修改</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="str_feedback_hint_feed">留下您的意见和建议吧</string>
    <string name="str_feedback_btn_commit">提交</string>
    <string name="str_feedback_toast_commit">您的意见已经提交成功，感谢您的反馈</string>
    <string name="str_aboutus_version">版本号</string>
    <string name="str_aboutus_service_protocal">服务条款</string>
    <string name="str_orderlist_cancel_protocal">已取消，已和学员达成协议</string>
    <string name="str_orderstate_cancelled">已取消</string>
    <string name="str_orderstate_evaluated">已评价</string>
    <string name="str_orderstate_complaint">投诉</string>
    <string name="str_orderstate_evalitem_attitude">态度</string>
    <string name="str_orderstate_evalitem_environment">环境</string>
    <string name="str_orderstate_evalitem_traffic">交通</string>
    <string-array name="str_complaint_reasons">
        <item>多次咨询，无学车打算</item>
        <item>谎报目的地</item>
        <item>态度恶劣</item>
    </string-array>
    <string name="str_complaint_reason_other">其他投诉理由</string>
    <string name="str_complaint_confirm_complaint">确认投诉</string>
    <string name="str_calendar_weekday_1">一</string>
    <string name="str_calendar_weekday_2">二</string>
    <string name="str_calendar_weekday_3">三</string>
    <string name="str_calendar_weekday_4">四</string>
    <string name="str_calendar_weekday_5">五</string>
    <string name="str_calendar_weekday_6">六</string>
    <string name="str_calendar_weekday_7">日</string>
    <string name="str_calendar_sub_title">学员预约课程</string>
    <string name="str_calendar_subject_limits">已选%1$d人/限选%2$d人</string>
    <string name="str_forgetpwd_hint">请先验证您的手机号后重置密码！</string>
    <string name="str_forgetpwd_confirm_reset">确认重置</string>
    <string name="str_forgetpwd_err_phone_notexist">该手机号并不存在，请检查后重试</string>
    <string name="str_forgetpwd_info_reset_success">重置密码成功，请重新登录</string>
    <string name="str_forgetpwd_err_reset_fail">重置密码失败，请稍后再试</string>
    <string name="str_forgetpwd_err_vcode_wrong">验证码不匹配，重置密码失败</string>
    <string name="str_realtime_snapup_tag_realtime">实时</string>
    <string name="str_realtime_snapup_execute_snap">抢单</string>
    <string name="str_realtime_snapup_err_order_notexist">订单不存在</string>
    <string name="str_realtime_snapup_err_order_outofdate">订单已过期</string>
    <string name="str_realtime_snapup_err_order_notvalid">订单已失效</string>
    <string name="str_realtime_snapup_err_order_cancelled">订单已取消</string>
    <string name="str_realtime_snapup_err_order_snappedbyother">订单已被抢</string>
    <string name="str_realtime_snapup_unknow_distance">距离获取中&#8230;</string>
    <string name="str_realtime_snapup_unknow_position">位置获取中&#8230;</string>
    <string name="str_realtime_snapup_distance">距离您%1$.1f公里</string>
    <string name="str_dialog_btn_iknow">我知道了</string>
    <string name="str_booksetting_period_am">上午</string>
    <string name="str_booksetting_period_pm">下午</string>
    <string name="str_booksetting_period_night">晚上</string>
    <string name="str_booksetting_time_am">07:00&#8212;&#8212;12:00</string>
    <string name="str_booksetting_time_pm">13:00&#8212;&#8212;18:00</string>
    <string name="str_booksetting_time_night">19:00&#8212;&#8212;20:00</string>
    <string name="title_activity_recruit">招　生</string>
	<string name="str_recruit_training_place">所在训练场</string>
	<string name="str_recruit_training_photo">训练场图片</string>
	<string name="str_recruit_coach_detail">教练详情</string>
	<string name="str_recruit_modify_package">招生套餐</string>
</resources>