<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_calendar_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_7" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_1" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_2" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_3" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_4" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_5" />

        <TextView
            style="@style/style_calendar_weekday_tv"
            android:text="@string/str_calendar_weekday_6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_calendar_wegroup_item_line" />

</LinearLayout>