<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bkg_gray"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/modifypwd_titlebar"
        style="@style/style_common_titlebar" >

        <ImageButton
            style="@style/style_common_title_backbtn"
            android:contentDescription="@null" />

        <TextView
            style="@style/style_common_titletv"
            android:text="@string/title_activity_modify_password" />
    </RelativeLayout>

    <LinearLayout
        style="@style/style_common_macth_wrap"
        android:layout_below="@id/modifypwd_titlebar"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/modifypwd_edit_oldpwd"
            style="@style/style_modifypwd_form"
            android:hint="@string/str_modifypwd_hint_oldpwd"
            android:layout_marginTop="@dimen/margin_xxlarge" />

        <EditText
            android:id="@+id/modifypwd_edit_newpwd"
            style="@style/style_modifypwd_form"
            android:hint="@string/str_modifypwd_hint_newpwd"
            android:layout_marginTop="@dimen/margin_middle" />

        <EditText
            android:id="@+id/modifypwd_edit_cfmpwd"
            style="@style/style_modifypwd_form"
            android:hint="@string/str_modifypwd_hint_cfmpwd"
            android:layout_marginTop="@dimen/margin_middle" />

        <Button
            android:id="@+id/modifypwd_btn_confirm"
            style="@style/style_common_theme_btn"
            android:layout_marginTop="@dimen/margin_middle"
            android:text="@string/str_modifypwd_btn_confirm" />
    </LinearLayout>

</RelativeLayout>