<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_all_bkg"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/forgetpwd_titlebar"
        style="@style/style_common_titlebar" >

        <ImageButton
            style="@style/style_common_title_backbtn"
            android:contentDescription="@null" />

        <TextView
            style="@style/style_common_titletv"
            android:text="@string/title_activity_forget_password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetpwd_titlebar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large" >
        
        <TextView style="@style/style_common_wrap_wrap"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/txtsize_large"
            android:textColor="@color/color_deeper_gray"
            android:text="@string/str_forgetpwd_hint"/>

        <RelativeLayout
            style="@style/style_common_macth_wrap"
            android:layout_marginTop="@dimen/margin_large" >

            <Button
                android:id="@+id/forgetpwd_btn_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bkg_common_theme_btn"
                android:enabled="false"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/padding_middle"
                android:paddingLeft="@dimen/padding_middle"
                android:paddingRight="@dimen/padding_middle"
                android:paddingTop="@dimen/padding_middle"
                android:text="@string/str_verify_phone_btn_get_vcode"
                android:textColor="@drawable/sel_common_theme_btn_txtcolor"
                android:textSize="@dimen/txtsize_large" />

            <EditText
                android:id="@+id/forgetpwd_edit_phone"
                style="@style/style_common_macth_wrap"
                android:layout_marginRight="@dimen/padding_middle"
                android:layout_toLeftOf="@id/forgetpwd_btn_verify"
                android:background="@drawable/bkg_login_form"
                android:hint="@string/str_verify_phone_hint_phonenum"
                android:inputType="phone"
                android:padding="@dimen/padding_middle" >
            </EditText>
        </RelativeLayout>

        <EditText
            android:id="@+id/forgetpwd_edit_vcode"
            style="@style/style_common_macth_wrap"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bkg_login_form"
            android:hint="@string/str_verify_phone_hint_verifycode"
            android:inputType="number"
            android:padding="@dimen/padding_middle" >
        </EditText>

        <EditText
            android:id="@+id/forgetpwd_edit_pwd"
            style="@style/style_common_macth_wrap"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bkg_login_form"
            android:hint="@string/str_register_hint_setpassword"
            android:inputType="textPassword"
            android:padding="@dimen/padding_middle" >
        </EditText>

        <Button
            android:id="@+id/forgetpwd_btn_confirm_reset"
            style="@style/style_register_fragbtn_next"
            android:text="@string/str_forgetpwd_confirm_reset" />
    </LinearLayout>

</RelativeLayout>